--- a/views/layout.dust
+++ b/views/layout.dust
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{title}</title>
+    <title>{+title /}</title>
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles/style.css" />
@@ -14,7 +14,9 @@
 <body>
     <div class="container-fluid">
         {>header /}
-        <div id="tmpl-main"></div>
+        <div id="body-main">
+             {+body /}
+        </div>
         {>footer /}
     </div>
     <script type="text/javascript" src="/scripts/bundle.js"></script>
