--- a/views/productmain.dust
+++ b/views/productmain.dust
@@ -14,7 +14,9 @@
 <body>
     <div class="container-fluid">
         {>header /}
-        <div id="tmpl-main"></div>
+        <div id="tmpl-main">
+            {>"templates/products/productcontainer" product=product taxonomy=taxonomy /}
+        </div>
         {>footer /}
     </div>
     <script type="text/javascript" src="/scripts/bundle.js"></script>
