--- a/views/search.dust
+++ b/views/search.dust
@@ -15,23 +15,9 @@
     <div class="container-fluid">
         {>header/}
         <div class="row">
-            <h3> Search result </h3>
-            <ul>
-                {#products}
-                <li class="col-xs-6 col-sm-6 col-md-4 col-lg-2" id="rProduct">
-                    <div id="addToCart" data-product='{.|js}' class="jstooltip" style="display: none;">
-                        <span class="item_price">{priceLabel}</span>
-                        <a class="item_add">Add to Cart</a>
-                    </div>
-                    <a href="/products/{id}" class="product" data-productId="{id}">
-                        <img src="{image.sizes.Small.url}" class="img-responsive" alt="Image">
-                        <div> {name}</div>
-                        <div>{priceLabel} </div>
-                </li>
-                {:else}
-                <p>no products to show</p>
-                {/products}
-            </ul>
+            <div id="tmpl-main">
+                    {>"templates/products/products"/}
+            </div>
         </div>
         {>footer/}
     </div>
