--- a/views/layouts/master.dust
+++ b/views/layouts/master.dust
@@ -5,21 +5,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{title}</title>
+    <title>Shoppy|{title}</title>
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
+    <link rel="stylesheet" type="text/css" href="/styles/style.min.css" />
 </head>
 
 <body>
     <div class="container-fluid">
         {>header /}
         <div id="body-main">
-            {>"templates/products/productcontainer" product=product taxonomy=taxonomy /}
+            {+body /}
         </div>
         {>footer /}
     </div>
     <script type="text/javascript" src="/scripts/bundle.js"></script>
+    <script type="text/javascript" id="initialize_application">
+    Application.bootstrap('{options|js|s}');
+    </script>
 </body>
 
 </html>
