--- a/views/search.dust
+++ b/views/search.dust
@@ -1,27 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{title}</title>
-    <!-- Bootstrap CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/styles/style.css" />
-</head>
-
-<body>
-    <div class="container-fluid">
-        {>header/}
-        <div class="row">
-            <div id="tmpl-main">
-                    {>"templates/products/products"/}
-            </div>
-        </div>
-        {>footer/}
-    </div>
-    <script type="text/javascript" src="/scripts/bundle.js"></script>
-</body>
-
-</html>
+{>"layouts/master"/}
+{<body}
+{>"templates/products/products"/}
+{/body}
