--- a/views/templates/products/product.dust
+++ b/views/templates/products/product.dust
@@ -10,8 +10,8 @@
             </div>
             <div class="row"> {product.priceLabel} </div>
             <div class="row">
-                <a href="{product.clickUrl}" class="btn btn-success">Buy Now</a>
-                 <div id="addToCart" data-product='{product|js}' class="btn btn-danger">Add TO Cart</div>
+                <a href="{product.clickUrl}" class="product btn btn-success">Buy Now</a>
+                 <div id="addToCart" class="modelProduct btn btn-danger"  {@eq key=server value="yes"}data-model='{product|js}'{/eq}>Add TO Cart</div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
