--- a/views/templates/products/products.dust
+++ b/views/templates/products/products.dust
@@ -1,17 +1,23 @@
-<h3> {subtitle} </h3>
+<h3>{subtitle} </h3>
 <ul>
     {#products}
     <li class="col-xs-6 col-sm-6 col-md-4 col-lg-2" id="rProduct">
-        <div id="addToCart" data-product='{.|js}' class="jstooltip" style="display: none;">
+        <div id="addToCart" class="modelProduct jstooltip" {@eq key=server value="yes" }data-model='{.|js}' {/eq} style="display: none;">
             <span class="item_price">{priceLabel}</span>
             <a class="item_add">Add to Cart</a>
         </div>
-        <a href="/products/{id}" class="product" data-productId="{id}">
-            <img src="{image.sizes.Small.url}" class="img-responsive" alt="Image">
-            <div> {name}</div>
-            <div>{priceLabel} </div>
+        <a class="product" href="/products/{id}" data-productId="{id}">
+            <div class="img-wrapper">
+                <img src="{image.sizes.Medium.url}" class="img-responsive" alt="Image">
+            </div>
+            <div class="product-desc">
+                <h4> {name}</h4>
+                <div class="pricetag">{priceLabel} </div>
+            </div>
+        </a>
     </li>
     {:else}
     <p>no products to show</p>
     {/products}
 </ul>
+
