--- a/views/templates/products/products.dust
+++ b/views/templates/products/products.dust
@@ -1,7 +1,8 @@
+<hr />
 <h3>{subtitle} </h3>
-<ul>
+<ul class="product-listings">
     {#products}
-    <li class="col-xs-6 col-sm-6 col-md-4 col-lg-2" id="rProduct">
+    <li class="col-xs-12 col-md-4 col-lg-2 list-item" id="rProduct">
         <div id="addToCart" class="modelProduct jstooltip" {@eq key=server value="yes" }data-model='{.|js}' {/eq} style="display: none;">
             <span class="item_price">{priceLabel}</span>
             <a class="item_add">Add to Cart</a>
