--- a/views/templates/products/productcontainer.dust
+++ b/views/templates/products/productcontainer.dust
@@ -1,13 +1,13 @@
 <div class="row">
-    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
     </div>
-    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+    <div class="col-xs-11 col-sm-11 col-md-11 col-lg-11">
         <div class="product-tmpl">
-            {>"templates/products/product" /}
+            {@eq key=server value="yes"} {>"templates/products/product" /} {/eq}
         </div>
         <div class="related-product-tmpl">
-            <hr />
-                {>"templates/products/products" /}
+            {@eq key=server value="yes"}
+             {>"templates/products/products" /} {/eq}
         </div>
     </div>
 </div>
