--- a/views/templates/products/product.dust
+++ b/views/templates/products/product.dust
@@ -10,7 +10,7 @@
             </div>
             <div class="row"> {product.priceLabel} </div>
             <div class="row">
-                <a href="{product.clickUrl}" class="product btn btn-success">Buy Now</a>
+                <a href="{product.clickUrl}" class="btn btn-success">Buy Now</a>
                  <div id="addToCart" class="modelProduct btn btn-danger"  {@eq key=server value="yes"}data-model='{product|js}'{/eq}>Add TO Cart</div>
             </div>
         </div>
