--- a/views/footer.dust
+++ b/views/footer.dust
@@ -3,7 +3,7 @@
         Panel content
     </div>
     <div class="panel-footer">
-        @2015
+       <p class="text-center"> &copy; Srijan Technology Pvt. Ltd. </p>
     </div>
 
 </div>
