--- a/views/layouts/master.dust
+++ b/views/layouts/master.dust
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shoppy|{title}</title>
+    <title>Shoppy Now|{title}</title>
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/styles/style.min.css" />
@@ -20,8 +20,8 @@
     </div>
     {>footer /}
     <script type="text/javascript" src="/scripts/bundle.js"></script>
-    <script type="text/javascript" id="initialize_application">
-    Application.bootstrap('{options|js|s}');
+     <script type="text/javascript" id="initialize_application">
+            Application.bootstrap('{options|js|s}');
     </script>
 </body>
 
